# TribalWars

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yaml
config/: config.toml  de251.toml
config/templates/: defensive.toml  early_game.toml  offensive.toml
dashboard/: index.html  package-lock.json  vite.config.ts
dashboard/src/: App.tsx  types.ts
dashboard/src/components/: VNCBanner.tsx
dashboard/src/components/Config/: BuildQueueEditor.tsx  ConfigTab.tsx  FarmThreshold.tsx  FeatureToggles.tsx  VillageOverrides.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/styles/: globals.css
docker/: entrypoint.sh
helm/staemme/: Chart.yaml  values.yaml
helm/staemme/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  novnc-ingress.yaml  pvc.yaml  secret.yaml  service.yaml
src/staemme/: __init__.py  __main__.py  app.py
src/staemme/api/: __init__.py  panel_adapter.py  routes.py  server.py  websocket.py
src/staemme/core/: bot_protection.py  browser_client.py  config.py  database.py  exceptions.py  extractors.py  humanizer.py  logging.py  panel_interface.py  panel_state.py  scavenge_formulas.py  session_manager.py  side_panel.py
src/staemme/game/: api.py
src/staemme/managers/: building_manager.py  defense_manager.py  farm_manager.py  report_manager.py  scavenge_manager.py  troop_manager.py  village_manager.py
src/staemme/models/: __init__.py  buildings.py  farm_target.py  troops.py  village.py  world.py
tests/: test_building_manager.py  test_extractors.py
(+14 files in other folders)
